@@ -6,6 +6,7 @@ xx/xx/xx - trunk:
             - Fix: Propose a project name (unknown.img) when saving a new
               project from the "save" button.
             - Rewrote the handling of video formats, including saving/loading the project settings. Fixes bug #3306974.
+            - Added H.264/MPEG-4 AVC support, thanks to David Gnedt
 
 06/03/11 - 3.0:
 			- Added Chinese simplified and Chinese traditional translations.
